--- a/Bootcamp_Full-Stack/semana-5/index.html
+++ b/Bootcamp_Full-Stack/semana-5/index.html
@@ -11,7 +11,7 @@
     <title>Formulario de Datos Personales</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../Semana-1/Favicon/favicon.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
