--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -40,6 +40,15 @@
         </div>
     </nav>
 
+    <!-- banner ofertas -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 text-center bannerOfertas py-1 fs-1 fw-bold">
+                ¡OFERTONES!
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
