--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -49,6 +49,21 @@
         </div>
     </div>
 
+    <!-- banner secundario -->
+    <div class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center p-5">
+                <p class="fs-1">
+                    En Supermercados La Estancia tenemos un fuerte compromiso con nuestros clientes y el medio ambiente. 
+                    Generamos más de 50 puestos de trabajo y con tu ayuda seguimos creciendo para brindarte los mejores productos y al mejor precio!
+                </p>
+            </div>
+            <div class="col-md-6 p-0">
+                <img src="../../imagenes/generales/EmpleadoB.jpg" alt="Empleado de Supermercado" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
