--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
 
     <link rel="stylesheet" href="./Home.css"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/pulse/bootstrap.min.css" rel="stylesheet"> 
+    <!-- <link href="../Css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 
 <body>
