--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
 
     <link rel="stylesheet" href="./Home.css"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/pulse/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -39,6 +39,26 @@
             </div>
         </div>
     </nav>
+    <!-- Banner principal -->
+    <div class="container-fluid text-center p-0">
+        <div class="row align-items-center">
+            <div class="col-12 col-md-6">
+                <img src="../../imagenes/generales/EmpleadoA.jpg" class="img-fluid" alt="Fotografía de una empleada del supermercado sonriendo">
+            </div>
+            <div class="col-12 col-md-6 p-3">
+                <div class="d-flex flex-column gap-4">
+                    <div class="py-2">
+                        <h3 class="fw-bold text-wrap mb-2 fs-md-1">Supermercados la Estancia</h3>
+                        <p class="fw-semibold text-wrap mb-0 fs-md-4">El lugar donde encontrás todo lo que necesitás para tu día a día!</p>
+                    </div>
+                    
+                    <div class="d-grid col-8 col-sm-6 col-md-5 col-lg-4 mx-auto">
+                        <button class="btn btn-primary rounded-3 fs-5" type="button">Ver catálogo</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
