--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -53,8 +53,8 @@
     <!-- banner secundario -->
     <div class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-md-6 text-center p-5">
-                <p class="fs-1">
+            <div class="col-md-6 text-center custom-padding">
+                <p class="responsive-text">
                     En Supermercados La Estancia tenemos un fuerte compromiso con nuestros clientes y el medio ambiente. 
                     Generamos más de 50 puestos de trabajo y con tu ayuda seguimos creciendo para brindarte los mejores productos y al mejor precio!
                 </p>
@@ -66,13 +66,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Ingresar todo el contenido del home (borrar style y h2) -->
-
-    <main style="margin-bottom: 300px;">
-
-        <h2> CONTENIDO</h2>
-    </main>
 </body>
 
 <footer class="Footer">
