Actualizo Menú de Trabajos Prácticos

--- a/Bootcamp_Full-Stack/index.html
+++ b/Bootcamp_Full-Stack/index.html
@@ -137,16 +137,27 @@
                     </ul>
                 </li>
 
-                <!-- Semana próxima -->
+                <!-- Semana 6 -->
                 <li class="list-group-item">
                     <button class="btn btn-outline-primary w-100 text-start" data-bs-toggle="collapse" data-bs-target="#semana6" aria-expanded="false" aria-controls="semana6">
-                        Semana próxima <i class="bi bi-chevron-down"></i>
+                        Semana 6 <i class="bi bi-chevron-down"></i>
                     </button>
                     <ul class="list-group collapse" id="semana6">
+                        <li class="list-group-item"><a href="./semana-6/Enunciado.txt" target="_blank">Enunciado</a></li>
+                        <li class="list-group-item"><a href="./semana-6/proyecto/Pages/Home/Home.html" target="_blank">TP - Desarrollo del sitio web de un Supermercado</a></li>
+                    </ul>
+                </li>
+
+                <!-- Semana próxima -->
+                <!-- <li class="list-group-item">
+                    <button class="btn btn-outline-primary w-100 text-start" data-bs-toggle="collapse" data-bs-target="#semana7" aria-expanded="false" aria-controls="semana7">
+                        Semana próxima <i class="bi bi-chevron-down"></i>
+                    </button>
+                    <ul class="list-group collapse" id="semana7">
                         <li class="list-group-item"><a href="#" target="_blank">Enunciado(pendiente)</a></li>
                         <li class="list-group-item"><a href="#" target="_blank">TP - Pendiente</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </nav>
     </div>
