--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="Categorias.css"> 
     <link rel="stylesheet" href="../Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="../Css/bootstrap.min.css" rel="stylesheet"> 
+    <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
 </head>
 
 <body>
+
     <!-- banner Categorías -->
     <div class="container">
         <div class="row">
