--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -8,8 +8,9 @@
     <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
 
     <link rel="stylesheet" href="./Home.css"> 
+    <link rel="stylesheet" href="../Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="../Css/bootstrap.min.css" rel="stylesheet"> 
+    <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
 </head>
 
 <body>
@@ -55,7 +56,9 @@
                     </div>
                     
                     <div class="d-grid col-8 col-sm-6 col-md-5 col-lg-4 mx-auto">
-                        <button class="btn btn-primary rounded-3 fs-5" type="button">Ver catálogo</button>
+                        <a href="../Categorias/Categorias.html" class="text-decoration-none">
+                            <button class="btn btn-primary rounded-3 fs-5" type="button">Ver catálogo</button>
+                        </a>
                     </div>
                 </div>
             </div>
