--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -26,8 +26,8 @@
 
     <!-- Categorías de productos -->
     <div class="container">
-        <div class="row mt-2">
-            <div class="col-6 d-flex align-items-stretch">
+        <div class="row">
+            <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
                 <a href="#" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
@@ -43,7 +43,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-6 d-flex align-items-stretch">
+            <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
                 <a href="#" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
@@ -60,8 +60,8 @@
                 </a>   
             </div>
         </div>
-        <div class="row mt-2">
-            <div class="col-6 d-flex align-items-stretch">
+        <div class="row">
+            <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
                 <a href="#" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
@@ -77,7 +77,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-6 d-flex align-items-stretch">
+            <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
                 <a href="#" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
@@ -94,8 +94,8 @@
                 </a>
             </div>
         </div>
-        <div class="row mt-2">
-            <div class="col-6 d-flex align-items-stretch">
+        <div class="row">
+            <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
                 <a href="#" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
@@ -111,7 +111,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-6 d-flex align-items-stretch">
+            <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
                 <a href="#" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
