Eliminadas clases responsive que no funcionan

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -42,7 +42,7 @@
     </nav>
     
     <!-- Banner principal -->
-    <div class="container-fluid text-center p-0">
+    <div class="container text-center p-0">
         <div class="row align-items-center">
             <div class="col-12 col-md-6">
                 <img src="../../imagenes/generales/EmpleadoA.jpg" class="img-fluid" alt="Fotografía de una empleada del supermercado sonriendo">
@@ -50,8 +50,8 @@
             <div class="col-12 col-md-6 p-3">
                 <div class="d-flex flex-column gap-4">
                     <div class="py-2">
-                        <h3 class="fw-bold text-wrap mb-2 fs-md-1">Supermercados la Estancia</h3>
-                        <p class="fw-semibold text-wrap mb-0 fs-md-4">El lugar donde encontrás todo lo que necesitás para tu día a día!</p>
+                        <h3 class="fw-bold text-wrap mb-2">Supermercados la Estancia</h3>
+                        <p class="fw-semibold text-wrap mb-0">El lugar donde encontrás todo lo que necesitás para tu día a día!</p>
                     </div>
                     
                     <div class="d-grid col-8 col-sm-6 col-md-5 col-lg-4 mx-auto">
