Creada la carpeta componentes donde esta el navbar para usar globalmente

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -15,6 +15,8 @@
 
 <body>
 
+    <div id="navbar-categorias"></div>
+
     <!-- banner Categorías -->
     <div class="container">
         <div class="row">
@@ -130,5 +132,5 @@
         </div>
     </div>
 
-</body>
+    <script src="../../Componentes/NavBarS.js" defer></script></body>
 </html>
