--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -14,33 +14,7 @@
 </head>
 
 <body>
-    <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg  navbar-custom" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./Home.html">
-                <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ofertas</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav  navbar-shopping" >
-                    <li class="nav-item">
-                        <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon">
-                        <a class="nav-link ver-compra" href="#">Ver compra</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id="navbar-home"></div>
     
     <!-- Banner principal -->
     <div class="container text-center p-0">
@@ -50,16 +24,14 @@
             </div>
             <div class="col-12 col-md-6 p-3">
                 <div class="d-flex flex-column gap-4">
-                    <div class="py-2">
-                        <h3 class="fw-bold text-wrap mb-2">Supermercados la Estancia</h3>
+                    <div class="d-grid col-8 col-sm-8 col-md-12 col-lg-8 mx-auto">
+                        <h3 class="fw-bold text-wrap">Supermercados la Estancia</h3>
                         <p class="fw-semibold text-wrap mb-0">El lugar donde encontrás todo lo que necesitás para tu día a día!</p>
                     </div>
                     
-                    <div class="d-grid col-8 col-sm-6 col-md-5 col-lg-4 mx-auto">
-                        <a href="../Categorias/Categorias.html" class="text-decoration-none">
-                            <button class="btn btn-primary rounded-3 fs-5" type="button">Ver catálogo</button>
-                        </a>
-                    </div>
+                    <a href="../Categorias/Categorias.html" class="text-decoration-none">
+                        <button class="btn btn-primary rounded-3 fs-5" type="button">Ver catálogo</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -89,6 +61,7 @@
         </div>
     </div>
 
+    <script src="../../Componentes/NavBarS.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
