--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!-- NavBar -->
     <div id="navbar-categorias"></div>
 
     <!-- banner Categorías -->
@@ -133,4 +133,6 @@
     </div>
 
     <script src="../../Componentes/NavBarS.js" defer></script></body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
