Cambia el nombre de la id del NavBar

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- NavBar -->
-    <div id="navbar-categorias"></div>
+    <div id="navbar-reutilizable"></div>
 
     <!-- banner Categorías -->
     <div class="container">
