--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -15,12 +15,12 @@
 
 <body>
     <!-- NavBar -->
-    <div id="navbar-home"></div>
+    <div id="navbar-reutilizable"></div>
     
     <!-- Banner principal -->
     <div class="container text-center p-0">
         <div class="row align-items-center">
-            <div class="col-12 col-md-6 px-0">
+            <div class="col-12 col-md-6 p-0">
                 <img src="../../imagenes/generales/EmpleadoA.jpg" class="img-fluid" alt="Fotografía de una empleada del supermercado sonriendo">
             </div>
             <div class="col-12 col-md-6 p-3">
