Modelo responsivo de la vista del producto

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
@@ -60,5 +60,69 @@
         
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-12 bg-primary rounded-custom-h2">
+                <div class="text-white p-3 text-center ">
+                    <h2 class="m-0">Lomo x KG</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row border border-1 border-secondary">
+            <div class="col-12 col-sm-12 col-md-3 bg-secondary p-4">
+                <img src="../../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5" alt="Imagen de Carne">
+            </div> 
+            <div class="col-12 col-sm-12 col-md-4 d-flex align-items-center justify-content-center border-end border-1 border-secondary">
+                <div class=" p-5 text-center ">
+                    <p class="mb-1">Lomo de ternera.</p>
+                    <p class="mb-1">El peso puede variar ligeramente.</p>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-5">
+                <div class="row d-flex align-items-center h-25 p-2">
+                    <div class="col-6">
+                        <p class="fw-bold">Precio x KG</p>
+                    </div>
+                    <div class="col-6">
+                        <p class="fw-bold">$8500</p>
+                    </div>
+                </div>
+                <div class="row d-flex align-items-center h-25 p-2">
+                    <div class="col-6">
+                        <img src="../../../imagenes/iconos/oferta.png" class="" alt="">
+                    </div>
+                    <div class="col-6">
+                        <p class="fw-bold">$8500</p>
+                    </div>
+                </div>
+                <div class="row d-flex align-items-center h-25 p-2">
+                    <div class="col-12">
+                        <button class="bg-primary w-100 d-flex align-items-center justify-content-start">
+                            <img src="../../../imagenes/iconos/shopping.png" width="25px" height="25px" class="me-2">
+                            <p class="mb-0 flex-grow-1 text-center text-white ">Agregar al Carrito</p>
+                        </button>
+                    </div>
+                </div>
+                <div class="row d-flex align-items-center h-25 p-2">
+                    <div class="col-6">
+                        <p class="fw-bold">Subtotal:</p>
+                    </div>
+                    <div class="col-6">
+                        <p class="fw-bold">$8500</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- 
+    <div class="d-flex justify-content-between align-items-center mb-5">
+        <p class="mb-0"><b>Precio x KG</b></p>
+        <p class="mb-0">$8500</p>
+    </div>
+    <button class="bg-primary w-100 d-flex align-items-center justify-content-start">
+        <img src="../../../imagenes/iconos/shopping.png" width="25px" height="25px" class="me-2">
+        <p class="mb-0 flex-grow-1 text-center text-white ">Agregar al Carrito</p>
+    </button>
+     -->
 </body>
 </html>
