Cambio 'container-fluid' por 'container'

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg  navbar-custom" data-bs-theme="dark">
-    <div class="container-fluid">
+    <div class="container">
         <a class="navbar-brand" href="../../Pages/Home/Home.html">
             <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img">
         </a>
