--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -18,7 +18,7 @@
     <div id="navbar-reutilizable"></div>
     
     <!-- Banner principal -->
-    <div class="container text-center p-0">
+    <div class="container text-center">
         <div class="row align-items-center">
             <div class="col-12 col-md-6 p-0">
                 <img src="../../imagenes/generales/EmpleadoA.jpg" class="img-fluid" alt="Fotografía de una empleada del supermercado sonriendo">
@@ -39,7 +39,7 @@
     </div>
 
     <!-- banner ofertas -->
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-12 text-center bannerOfertas py-1 fs-1 fw-bold">
                 ¡OFERTONES!
@@ -48,7 +48,7 @@
     </div>
 
     <!-- banner secundario -->
-    <div class="container-fluid">
+    <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center custom-padding">
                 <p class="responsive-text">
