--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
    
        
 <!-- 
@@ -94,7 +94,7 @@
         <p class="mb-0 flex-grow-1 text-center text-white ">Agregar al Carrito</p>
     </button>
      -->
-    <div class="container">
+    <div class="container pt-3">
         <div class="row">
             <div class="col-12 bg-primary rounded-custom-h2">
                 <div class="text-white p-3 text-center ">
