Productos Terminados, Correciones en el footer

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div id="navbar-reutilizable"></div>
 
     <div class="container">
         <div class="row">
@@ -35,8 +36,9 @@
             </div>
         </div>
         <div class="row border border-1 border-secondary">
-            <div class="col-12 col-sm-12 col-md-3 bg-secondary p-4">
-                <img src="../../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5" alt="Imagen de Carne">
+            <div class="col-12 col-sm-12 col-md-3 bg-secondary p-4 position-relative">
+                <img src="../../../imagenes/categorías/carnes/lomo.jpg" class="img-fluid rounded-5 img-producto" alt="Imagen de Carne">
+                <h4 class="Text-Ofertas">PRODUCTO EN OFERTA</h4>
             </div> 
             <div class="col-12 col-sm-12 col-md-4 d-flex align-items-center justify-content-center border-custom border-1 border-secondary">
                 <div class=" p-5 text-center ">
@@ -158,5 +160,8 @@
         <p class="mb-0 flex-grow-1 text-center text-white ">Agregar al Carrito</p>
     </button>
      -->
+
+     <script src="../../../Componentes/NavBarS.js" defer></script>
+
 </body>
 </html>
