--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/MultiplesProductos.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/MultiplesProductos.html
@@ -12,16 +12,24 @@
     <script defer src="Carnes.js"></script>
 </head>
 <body>
+    <div id="navbar-reutilizable"></div>
 
     <div class="container">
         <div class="row">
-            <div class="col-12 py-4 responsive-text">
-                Carnes
+            <div class="col-12 py-4 responsive-text d-flex">
+                <a href="../Categorias.html"  class="text-primary text-decoration-none" >Categorias</a>
+                <p class="mb-0 mx-2">/Carnes</p>
             </div>
         </div>
     </div>
-
     <div id="productos-container" class="container"></div>
+    <script src="../../../Componentes/NavBarS.js" defer></script>
 
 </body>
+<footer>
+
+    <div id="footer-reutilizable"></div>
+</footer>
+
+
 </html>
