--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -132,11 +132,11 @@
         </div>
     </div>
 
-    <script src="../../Componentes/NavBarS.js" defer></script>
+    <script src="../../Componentes/NavBarS.js" defer> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+<div id="footer-reutilizable"></div>
 
-<div class="d-flex" id="footer-reutilizable"></div>
 
 </html>
