--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado La Estancia</title>
-    <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
+    <link rel="icon" href="/semana-6/proyecto/imagenes/iconos/logo.png" type="image/png" >
 
     <link rel="stylesheet" href="./Home.css"> 
     <link rel="stylesheet" href="../Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
+    <link href="/semana-6/proyecto/Css/bootstrap.min.css" rel="stylesheet"> 
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="container text-center">
         <div class="row align-items-center">
             <div class="col-12 col-md-6 p-0">
-                <img src="../../imagenes/generales/EmpleadoA.jpg" class="img-fluid" alt="Fotografía de una empleada del supermercado sonriendo">
+                <img src="/semana-6/proyecto/imagenes/generales/EmpleadoA.jpg" class="img-fluid" alt="Fotografía de una empleada del supermercado sonriendo">
             </div>
             <div class="col-12 col-md-6 p-3">
                 <div class="d-flex flex-column gap-4">
@@ -30,7 +30,7 @@
                         <p class="fw-semibold text-wrap mb-0">El lugar donde encontrás todo lo que necesitás para tu día a día!</p>
                     </div>
                     
-                    <a href="../Categorias/Categorias.html" class="text-decoration-none">
+                    <a href="/semana-6/proyecto/Categorias/Categorias.html" class="text-decoration-none">
                         <button class="btn btn-primary rounded-3 fs-5" type="button">Ver catálogo</button>
                     </a>
                 </div>
@@ -57,12 +57,12 @@
                 </p>
             </div>
             <div class="col-md-6 p-0">
-                <img src="../../imagenes/generales/EmpleadoB.jpg" alt="Empleado de Supermercado" class="img-fluid">
+                <img src="/semana-6/proyecto/imagenes/generales/EmpleadoB.jpg" alt="Empleado de Supermercado" class="img-fluid">
             </div>
         </div>
     </div>
 
-    <script src="../../Componentes/NavBarS.js" defer></script>
+    <script src="/semana-6/proyecto/Componentes/NavBarS.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
