--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Home/Home.html
@@ -7,8 +7,8 @@
     <title>Supermercado La Estancia</title>
     <link rel="icon" href="/semana-6/proyecto/imagenes/iconos/logo.png" type="image/png" >
 
-    <link rel="stylesheet" href="./Home.css"> 
-    <link rel="stylesheet" href="../Global.css">
+    <link rel="stylesheet" href="/semana-6/proyecto/Pages/Home/Home.css"> 
+    <link rel="stylesheet" href="/semana-6/proyecto/Pages/Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <link href="/semana-6/proyecto/Css/bootstrap.min.css" rel="stylesheet"> 
 </head>
