--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/Footer.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/Footer.html
@@ -1,4 +1,4 @@
-<footer class="Footer" style="background-color: #593096; color: #ffffff; padding: 15px 0; margin: 0; box-shadow: 0px -26px 45px rgb(0, 0, 0); margin-top: 80px;">
+<footer class="Footer" style="background-color: #593096; color: #ffffff; padding: 15px 0; margin: 0; box-shadow: 0px -26px 45px rgb(0, 0, 0);">
     <div class="container">
         <div class="row text-center text-md-left">
             <div class="col-lg-3 col-md-6">
@@ -11,7 +11,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <p class="mb-3" style="font-size: 14px; color: #e9ecef;">Escríbenos al WhatsApp: <br/>
-                    <img src="../../../imagenes/iconos/whatsapp.png" style="width: 15px; height: 15px;"> 
+                    <img src="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/iconos/whatsapp.png" style="width: 15px; height: 15px;"> 
                     <a href="https://wa.me/54911998877661" target="_blank" style="color: #ffffff;">+54911 998877661</a>
                 </p>
             </div>
