--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado La Estancia</title>
-    <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png">
-    <link rel="stylesheet" href="../Carnes/Carnes.css"> 
-    <link rel="stylesheet" href="../../Global.css">
+    <link rel="icon" href="/Bootcamp_Full-Stack/semana-6/proyecto/imagenes/iconos/logo.png" type="image/png">
+
+    <link rel="stylesheet" href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.css"> 
+    <link rel="stylesheet" href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="../../../Css/bootstrap.min.css" rel="stylesheet"> 
-    <script defer src="Carnes.js"></script>
+    <link href="/Bootcamp_Full-Stack/semana-6/proyecto/Css/bootstrap.min.css" rel="stylesheet"> 
+    <script defer src="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Carnes/Carnes.js"></script>
 </head>
 <body>
     <div id="navbar-reutilizable"></div>
@@ -17,13 +18,13 @@
     <div class="container">
         <div class="row">
             <div class="col-12 py-4 responsive-text d-flex">
-                <a href="../Categorias.html"  class="text-primary text-decoration-none" >Categorias</a>
+                <a href="/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html"  class="text-primary text-decoration-none" >Categorias</a>
                 <p class="mb-0 mx-2">/Carnes</p>
             </div>
         </div>
     </div>
     <div id="productos-container" class="container"></div>
-    <script src="../../../Componentes/NavBarS.js" defer></script>
+    <script src="/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBarS.js" defer></script>
 
 </body>
 <footer>
