--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -30,7 +30,7 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="../Categorias/Carnes/Carnes.html" class="text-decoration-none d-flex">
+                <a href="../Categoria-Carne/Carnes.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
