--- a/Bootcamp_Full-Stack/index.html
+++ b/Bootcamp_Full-Stack/index.html
@@ -145,7 +145,7 @@
                     <ul class="list-group collapse" id="semana6">
                         <li class="list-group-item"><a href="./semana-6/Enunciado.txt" target="_blank">Enunciado</a></li>
                         <li class="list-group-item"><a href="./semana-6/proyecto/Pages/Home/Home.html" target="_blank">TP - Desarrollo del sitio web de un Supermercado</a></li>
-                        <li class="list-group-item"><a href="./semana-6 copy/proyecto/Pages/Home/Home.html" target="_blank">Prueba</a></li>
+                        <!-- <li class="list-group-item"><a href="./semana-6 copy/proyecto/Pages/Home/Home.html" target="_blank">Prueba</a></li> -->
                     </ul>
                 </li>
 
