Mejoras NavBar y Footer

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/Footer.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/Footer.html
@@ -1,22 +1,22 @@
-<footer class="Footer" style="background-color: #593096; color: #ffffff; padding: 15px 0; margin: 0; box-shadow: 0px -26px 45px rgb(0, 0, 0);">
-    <div class="container">
-        <div class="row text-center text-md-left">
-            <div class="col-lg-3 col-md-6">
-                <p class="navbar-brand" style="font-size: 18px; color: #ffffff; font-weight: bold;">
+<footer class="Footer bg-primary p-3 footer-custom" >
+    <div class="container ">
+        <div class="row text-center text-md-left text-white">
+            <div class="col-lg-3 col-md-6 ">
+                <p class="navbar-brand fs-5 fw-bold">
                     Supermercados<br> La Estancia
                 </p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <p class="mb-3" style="font-size: 14px; color: #e9ecef;">Calle de los Lapachos 5641,<br>CABA</p>
+                <p class="mb-3 fs-6">Calle de los Lapachos 5641,<br>CABA</p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <p class="mb-3" style="font-size: 14px; color: #e9ecef;">Escríbenos al WhatsApp: <br/>
+                <p class="mb-3 fs-6">Escríbenos al WhatsApp: <br/>
                     <img src="../../imagenes/iconos/whatsapp.png" style="width: 15px; height: 15px;"> 
-                    <a href="https://wa.me/54911998877661" target="_blank" style="color: #ffffff;">+54911 998877661</a>
+                    <a class="text-white" href="https://wa.me/54911998877661" target="_blank">+54911 998877661</a>
                 </p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <p class="mb-3" style="font-size: 14px; color: #e9ecef; padding-top: 10px;">supermercados@laestancia.com.ar</p>
+                <p class="mb-3 pt-3" style="font-size: 14px;">supermercados@laestancia.com.ar</p>
             </div>
         </div>
     </div>
