--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg  bg-primary navbar-custom" data-bs-theme="dark">
     <div class="container">
         <a class="navbar-brand" href="../../Pages/Home/Home.html">
             <img src="../../imagenes/iconos/logo.png" alt="Logo" class="logo-img">
@@ -18,7 +18,7 @@
             <ul class="navbar-nav  navbar-shopping" >
                 <li class="nav-item">
                     <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon">
-                    <a class="nav-link ver-compra" href="#">Ver compra</a>
+                    <a class="nav-link ver-compra text-black" href="#">Ver compra</a>
                 </li>
             </ul>
         </div>
