Todos los productos aregados

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Categorias/Categorias.html
@@ -30,7 +30,7 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="../Categoria-Carne/Carnes.html" class="text-decoration-none d-flex">
+                <a href="../Productos/Carnes.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
@@ -46,7 +46,7 @@
                 </a>
             </div>
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="#" class="text-decoration-none d-flex">
+                <a href="../Productos/Gaseosas.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="#" class="text-decoration-none d-flex">
+                <a href="../Productos/Lacteos.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
@@ -80,7 +80,7 @@
                 </a>
             </div>
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="#" class="text-decoration-none d-flex">
+                <a href="./../Productos/Limpieza.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
@@ -98,7 +98,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="#" class="text-decoration-none d-flex">
+                <a href="../Productos/Verduleria.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
@@ -114,7 +114,7 @@
                 </a>
             </div>
             <div class="col-12 col-sm-6 d-flex align-items-stretch mt-2">
-                <a href="#" class="text-decoration-none d-flex">
+                <a href="../Productos/Vinos.html" class="text-decoration-none d-flex">
                     <div class="card rounded-5 bg-secondary p-3 border border-dark"> 
                         <div class="row">
                             <div class="col-md-4 separador responsive-border"> 
