Borro alert agrego mayuscula

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Gaseosas.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Gaseosas.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div id="productos-container" class="container"></div>
-    <script src="./productos.js"></script>
+    <script src="./Productos.js"></script>
     <script src="./CargaProductos.js"></script>
     <script src="../../Componentes/NavBarS.js" defer> </script>
 
