--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Carnes.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Carnes.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../Global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
     <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
-    <script defer src="./Carnes.js"></script>
 
 </head>
 <body>
@@ -24,7 +23,7 @@
         </div>
     </div>
     <div id="productos-container" class="container"></div>
-    <script src="./productos.js"></script>
+    <script src="./Productos.js"></script>
     <script src="./CargaProductos.js"></script>
     <script src="../../Componentes/NavBarS.js" defer> </script>
 
