--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Limpieza.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Productos/Limpieza.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-12 py-4 responsive-text d-flex">
                 <a href="../Categorias/Categorias.html" class="text-primary text-decoration-none">Categorias</a>
-                <p class="mb-0 mx-2">/ Carnes</p>
+                <p class="mb-0 mx-2">/ Limpieza</p>
             </div>
         </div>
     </div>
