--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -18,7 +18,7 @@
             <ul class="navbar-nav  navbar-shopping" >
                 <li class="nav-item">
                     <img src="../../imagenes/iconos/shopping.png" class="shopping-img" alt="Shopping Icon">
-                    <a class="nav-link ver-compra text-black" href="#">Ver compra</a>
+                    <a class="nav-link ver-compra text-black" href="../Carrito/Carrito.html">Ver compra</a>
                 </li>
             </ul>
         </div>
