Agrego pantalla post venta

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Pagos/MedioDePago.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Pagos/MedioDePago.html
@@ -124,7 +124,9 @@
                 <!-- Botón de compra -->
                 <div class="row mb-3">
                     <div class="col text-center bg-primary">
-                        <button type="submit" class="btn submit-btn btn-lg text-white fw-bold">Comprar</button>
+                        <a href="../Pagos/CompraFinalizada.html" class="text-decoration-none">
+                            <button type="button" class="btn submit-btn btn-lg text-white fw-bold">Comprar</button>
+                        </a>
                     </div>
                 </div>
             </form>
