--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="../../Pages/Categorias/Categorias.html">Productos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Ofertas</a>
