--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Carrito/Carrito.html
@@ -18,5 +18,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./Carrito.js" defer></script> 
 </body>
-<div id="footer-reutilizable"></div>
+<div id="footer-reutilizable" style="margin-top: 120px;"></div>
 </html>
