Agrego productos en oferta

--- a/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Componentes/NavBar.html
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="../../Pages/Categorias/Categorias.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ofertas</a>
+                    <a class="nav-link" href="../Productos/Ofertas.Html">Ofertas</a>
                 </li>
             </ul>
             <ul class="navbar-nav  navbar-shopping" >
