--- a/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Pagos/CompraFinalizada.html
+++ b/Bootcamp_Full-Stack/semana-6/proyecto/Pages/Pagos/CompraFinalizada.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Supermercado La Estancia</title>
+        <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supermercado La Estancia</title>
-    <link rel="icon" href="../../imagenes/iconos/logo.png" type="image/png" >
+        <link rel="stylesheet" href="Categorias.css" />
+        <link rel="stylesheet" href="../Global.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="../../Css/bootstrap.min.css" rel="stylesheet" />
+    </head>
 
-    <link rel="stylesheet" href="Categorias.css"> 
-    <link rel="stylesheet" href="../Global.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="../../Css/bootstrap.min.css" rel="stylesheet"> 
-</head>
+    <body>
+        <!-- NavBar -->
+        <div id="navbar-reutilizable"></div>
 
-<body>
-    <!-- NavBar -->
-    <div id="navbar-reutilizable"></div>
-
-    <!-- banner secundario -->
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-6 p-0">
-                <img src="../../imagenes/generales/GraciasPorSuCompra.jpg" alt="Empleado de Supermercado" class="img-fluid">
+        <main>
+            <!-- banner secundario -->
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6 p-0">
+                        <img src="../../imagenes/generales/GraciasPorSuCompra.jpg" alt="Empleado de Supermercado" class="img-fluid" />
+                    </div>
+                    <div class="col-md-6 text-center custom-padding">
+                        <p class="responsive-text fw-bold">Muchas gracias por su compra!</p>
+                        <p class="responsive-text">El envío llegará aproximadamente a las 17:45hs a su domicilio</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6 text-center custom-padding">
-                <p class="responsive-text fw-bold">
-                    Muchas gracias por su compra!
-                </p>
-                <p class="responsive-text">
-                    El envío llegará aproximadamente a las 17:45hs a su domicilio
-                </p>
-            </div>
-        </div>
-    </div>
+        </main>
 
-    <script src="../../../proyecto/Componentes/NavBarS.js" defer> </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
-<div id="footer-reutilizable"></div>
-
+        <div id="footer-reutilizable"></div>
+        <script src="../../../proyecto/Componentes/NavBarS.js" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 </html>
